--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           
           echo "Waiting for LocalStack startup..." 
           localstack wait -t 30                    
-          echo "Startup complete"          
+          echo "Startup complete"
       - name: Run some Tests against LocalStack
         run: |
           awslocal s3 mb s3://test
@@ -36,7 +36,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'carretto'
+        distribution: 'corretto'
     - name: Build with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25
       with:
