--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
 
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok'
