--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
     name: 'LocalStack'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Start LocalStack
         uses: LocalStack/setup-localstack@v0.1.2
@@ -27,30 +28,45 @@ jobs:
         run: |
           chmod +x init-aws.sh
           ./init-aws.sh
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'corretto'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Execute Gradle build
+        working-directory: core-java
+        run: ./gradlew build
+
+      - name: Create resources
+        run: |
+          chmod +x init-aws.sh
+          ./init-aws.sh
+
+      - name: Publish lambda to S3
+        run: awslocal s3 cp core-java/build/distributions/core-java-1.0-SNAPSHOT.zip s3://lambda/core-java-1.0-SNAPSHOT.zip
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.2.5
+
       - name: Terraform-local installation
-        run: |
-          pip3 install terraform-local
-      - name: configure aws credentials
+        run: pip3 install terraform-local
+
+      - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: us-east-2
+
       - name: Terraform-local Plan and apply changes
+        working-directory: terraform
         run: |
           export TF_CLI_ARGS_plan="-compact-warnings"
           export TF_CLI_ARGS_apply="-compact-warnings"
-          tflocal init -backend-config=./terraform-config/localstack/backend.tf
-          tflocal validate
-          tflocal plan -input=false -no-color
+          tflocal init
           tflocal apply -auto-approve
-      - name: ACTUAL Terraform Plan and apply changes
-        run: |
-          export TF_CLI_ARGS_plan="-compact-warnings"
-          export TF_CLI_ARGS_apply="-compact-warnings"
-          terraform init -reconfigure -backend-config=./terraform-config/aws/backend.tf
-          terraform validate
-          terraform plan -input=false -no-color
-          terraform apply -auto-approve
