--- a/core-java/build.gradle
+++ b/core-java/build.gradle
@@ -10,8 +10,15 @@ repositories {
 }
 
 dependencies {
+    implementation platform('software.amazon.awssdk:bom:2.20.115')
+    implementation 'software.amazon.awssdk:s3'
 
+    implementation 'com.amazonaws:aws-lambda-java-core:1.2.2'
+    implementation 'com.amazonaws:aws-lambda-java-events:3.11.2'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
+
 
 tasks.register('buildZip', Zip) {
     from compileJava
