--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -22,15 +22,37 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('awssdkVersion', '2.20.115')
+    set('springcloudVersion', '3.0.1')
+    set('testcontainersVersion', '1.18.3')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "software.amazon.awssdk:bom:${awssdkVersion}"
+        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:${springcloudVersion}"
+        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+    }
+}
+
 dependencies {
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:dynamodb'
+    implementation 'software.amazon.awssdk:dynamodb-enhanced'
+    implementation 'software.amazon.awssdk:s3-transfer-manager'
+    implementation 'software.amazon.awssdk.crt:aws-crt:0.24.0'
+
     implementation 'org.springframework.boot:spring-boot-starter'
 
+    implementation 'io.awspring.cloud:spring-cloud-aws-sqs'
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:localstack'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
-
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
@@ -40,4 +62,22 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.register('buildZip', Zip) {
+    from compileJava
+    from processResources
+    into('lib') {
+        from configurations.runtimeClasspath
+    }
+}
+
+build.dependsOn buildZip
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'org.vitech.spring.Application'
+        )
+    }
 }
